--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -6,5 +6,6 @@ db.password=roottoor
 
 # Hibernate properties
 hibernate.show_sql=true
-hibernate.hbm2ddl.auto=update
+hibernate.hbm2ddl.auto=create
+
 
